# dist/api.yml
@@ -26,17 +26,15 @@ paths:
       responses:
         "201":
           description: User has been created
-        "400":
-          description: invalid input
         "409":
-          description: User is already exists
+          description: Username is already taken
 
   /auth/login:
     post:
       tags:
       - auth
       summary: login to server
-      description: sends user name and password to verify to user cardntials
+      description: sends user name and password to verify to user cardentials
       requestBody:
         content:
           application/json:
@@ -46,27 +44,24 @@ paths:
       responses:
         "200":
           description: |
-            User was found in the DB and authenitcated successfully. The session ID is returned in a cookie named `session`.  You should include this cookie in subsequent requests
+            User has logged in successfuly and recieved cookie. Also return the user's role list.
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/inline_response_200'
-        "400":
-          description: invalid input
-        "404":
-          description: couldnt find user name matching that password
+        "401":
+          description: Username or Password incorrect
 
   /auth/logout:
     post:
       tags:
       - auth
       summary: logout from server
-      description: deltes user cookies and authntication
+      description: deletes user's cookie
       responses:
         "200":
-          description: |
-            User was loggedout successfully. The session ID is rested in a cookie named `session`.
-        "400":
+          description: logout succeeded
+        "412":
           description: no user is logged in
             
   /user/favorites/matches:
@@ -84,12 +79,12 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/match'
-        "404":
-          description: Can not find the user
+        "401":
+          description: Unauthorized
     put:
       tags:
       - user
-      summary: update user's favorive matches
+      summary: update user's favorite matches
       description: sends match id to append match to user's favorite matches list
       requestBody:
         content:
@@ -99,85 +94,19 @@ paths:
         required: true
       responses:
         "200":
-          description: match has been successfuly added
+          description: The match successfully saved as favorite
         "400":
-          description: invalid input
+          description: something went wrong
+        "401":
+          description: Unauthorized
         "404":
-          description: couldnt find user name or match id
-  /user/favorites/players:
-    get:
-      tags:
-      - user
-      summary: get user's favorite players
-      description: return a list of user's favorite players
-      responses:
-        "200":
-          description: returns a list of user's fav players succesfully
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/partial_player'
-        "404":
-          description: Can not find the user
-    put:
-      tags:
-      - user
-      summary: update user's favorite player
-      description: sends user name and player id to append player to user's favorite players list
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/body_2'
-        required: true
-      responses:
-        "200":
-          description: player has been successfuly added
-        "400":
-          description: invalid input
-        "404":
-          description: couldnt find user name or player id
-  /user/favorites/teams:
-    get:
-      tags:
-      - user
-      summary: get user's favorite teams
-      description: return a list of user's favorite teams
-      responses:
-        "200":
-          description: returns a list of teams succesfully
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/team'
-        "404":
-          description: Could not find the user
-    put:
-      tags:
-      - user
-      summary: update user's favorite team
-      description: sends user name and team id to append team to user's favorite team list
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/body_3'
-        required: true
-      responses:
-        "200":
-          description: team has been successfuly added
-        "400":
-          description: invalid input
-        "404":
-          description: couldnt find user name or team id
+          description: no such match
+        "412":
+          description: match is already a favorite
+
   /user/union_representative/assign_referee:
     put:
       tags:
-      - user
       - union_representative
       summary: assign referee role to an existing user
       description: union repesentative can assign referee role to an existing user
@@ -190,15 +119,17 @@ paths:
       responses:
         "200":
           description: The role was assigned successfuly
-        "401":
-          description: Authentication failed
+        "403":
+          description: User isn't permitted
         "404":
           description: Username was not found
+        "412":
+          description: user is already referee
+
 
   /user/union_representative/add_score:
     put:
       tags:
-      - user
       - union_representative
       summary: add score to an existing match
       description: union repesentative can add score to a match 
@@ -211,15 +142,14 @@ paths:
       responses:
         "200":
           description: The score was assigned successfuly
-        "401":
-          description: Authentication failed
+        "403":
+          description: User isn't permitted
         "404":
           description: match_id was not found
 
   /user/union_representative/add_event:
     put:
       tags:
-      - user
       - union_representative
       summary: add event to an existing match
       description: union repesentative can add event to a match's log event 
@@ -232,8 +162,8 @@ paths:
       responses:
         "200":
           description: The event was added successfuly
-        "401":
-          description: Authentication failed
+        "403":
+          description: User isn't permitted
         "404":
           description: match_id was not found
   /league/summary:
@@ -250,11 +180,11 @@ paths:
               schema:
                 $ref: '#/components/schemas/inline_response_200_1'
         "400":
-          description: didnt find avilable data on league
+          description: didnt find available data on league
   /user/union_representative/assign_referee_league:
     put:
       tags:
-      - user
+      - union_representative
       summary: assign referee to an existing league
       description: union repesentative can assign referee role to an existing league
       requestBody:
@@ -266,10 +196,12 @@ paths:
       responses:
         "200":
           description: The referee was assigned to the league successfuly
-        "401":
-          description: Authentication failed
+        "403":
+          description: User isn't permitted
         "404":
           description: The referee's username was not found
+        "412":
+          description: To assign referee to a league, The user should be already a referee
   /player/page/{player_id}:
     get:
       tags:
@@ -292,7 +224,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/player'
         "404":
-          description: player_id not found
+          description: player id not found
   /team/page/{team_id}:
     get:
       tags:
@@ -307,6 +239,7 @@ paths:
         explode: false
         schema:
           type: string
+          example: 211
       responses:
         "200":
           description: returns a json object with data to fill in the team's page
@@ -331,10 +264,10 @@ paths:
                 $ref: '#/components/schemas/inline_response_200_2'
         "400":
           description: didnt find avilable data on league
-  /league/matches/{league_id}:
+  /user/union_representative/matches/{league_id}:
       get:
         tags:
-        - league
+        - union_representative
         summary: get league season matches
         description: returns a json object with array of all current season matches
         parameters:
@@ -353,14 +286,15 @@ paths:
                 schema:
                   $ref: '#/components/schemas/inline_response_200_3'
           "400":
-            description: didnt find avilable data on league
-          "404":
-            description: couldn't find matches in the given league_id
+            description: didnt find available data on league
+          "403":
+            description: User isn't permitted
+
 
   /user/union_representative/match:
     post:
       tags:
-      - league
+      - union_representative
       summary: create a new match
       description: union represatative adds a new match to the league
       requestBody:
@@ -372,10 +306,12 @@ paths:
       responses:
         "201":
           description: match has been created
-        "401":
-          description: authentication failed
+        "400":
+          description: invalid match day
+        "403":
+          description: User isn't permitted
         "404":
-          description: one of the parameters you listed wasn't found
+          description: one of the teams not found or referee not found or referee is not in this league
   /player/search:
     get:
       tags:
@@ -391,7 +327,7 @@ paths:
         explode: true
         schema:
           type: string
-        example: Lionel Messi
+        example: James Gomez
       - name: sorted
         in: query
         description: The type of sort (by team name/by player name), if none present then won't sort
@@ -400,10 +336,10 @@ paths:
         explode: true
         schema:
           type: string
-        example: Messi
+        example: player name
       - name: filtered_by
         in: query
-        description: The type of filter (by player position or by team name)
+        description: The type of filter (by position or by team name)
         required: false
         style: form
         explode: true
@@ -418,7 +354,7 @@ paths:
         explode: true
         schema:
           type: string
-        example: goalkeeper
+        example: 2
       responses:
         "200":
           description: returns a json object with a list of players with the given name
@@ -442,6 +378,7 @@ paths:
         explode: true
         schema:
           type: string
+          example: AGF
       - name: sorted
         in: query
         description: The type of sort ('True'/'False') if 'Fasle' present then won't sort
@@ -580,7 +517,6 @@ components:
       - country
       - date_of_birth
       - fullname
-      - height
       - nationality
       - picture
       - player_id
@@ -591,35 +527,49 @@ components:
         player_id:
           type: string
           description: The player's id
+          example: 37418793
         fullname:
           type: string
           description: The player's full name
+          example: James Gomez
         team_name:
           type: string
           description: The player's team name
+          example: Horsens
         picture:
           type: string
           description: The player's url picture
+          example: https://cdn.sportmonks.com/images/soccer/players/9/37418793.png
           format: URL
         position_num:
           type: string
           description: Player's position number
+          example: 2
         common_name:
           type: string
           description: The player's common name
+          example: J. Gomez
         nationality:
           type: string
           description: The player's nationality
+          example: Gambia
         date_of_birth:
           type: string
           description: The player's date of birth
+          example: 04/04/1994
           format: date
         country:
           type: string
           description: The player's country
+          example: 2507
         height:
           type: string
           description: The player's height
+          example: null
+        Weight:
+          type: string
+          description: The player's weight
+          example: null
     partial_player:
       required:
       - fullname
@@ -632,19 +582,24 @@ components:
         player_id:
           type: string
           description: The player's id
+          example: 37418793
         fullname:
           type: string
           description: The player's full name
+          example: James Gomez
         team_name:
           type: string
           description: The player's team name
+          example: Horsens
         picture:
           type: string
           description: The player's url picture
+          example: https://cdn.sportmonks.com/images/soccer/players/9/37418793.png
           format: URL
         position_num:
           type: string
           description: Player's position number
+          example: 2
     team:
       required:
       - matches
@@ -718,37 +673,12 @@ components:
           type: string
           description: must be unique match identitfier
           example: 1
-    body_2:
-      type: object
-      properties:
-        username:
-          maxLength: 8
-          minLength: 3
-          type: string
-          description: Must have 3-8 characters, letters only
-          example: KingMessi
-        player_id:
-          type: string
-          description: must be unique player identitfier
-          example: FP1010
-    body_3:
-      type: object
-      properties:
-        username:
-          maxLength: 8
-          minLength: 3
-          type: string
-          description: Must have 3-8 characters, letters only
-          example: KingMessi
-        player_id:
-          type: string
-          description: must be unique team identitfier
-          example: TM1010
     body_4:
       type: object
       properties:
         username:
           type: string
+          example: KingMessi
           description: The username of the user to be assigned as a referee
     inline_response_200_1:
       type: object
@@ -768,6 +698,7 @@ components:
       properties:
         username:
           type: string
+          example: KingMessi
           description: The username of the user to be assigned as a referee
     inline_response_200_2:
       type: object
@@ -796,19 +727,20 @@ components:
         home_team_name:
           type: string
           description: The home team name
-          example: Maccabi Haifa
+          example: AGF
         away_team_name:
           type: string
           description: The away team name
-          example: Bnei Lod
+          example: AaB
         date:
           type: string
           description: The date of the match
           format: date-time
+          example: 2021-09-04T21:52:00
         referee_name:
           type: string
           description: The referee name
-          example: Alon Yeffet
+          example: ref
     inline_response_200_4:
       properties:
         search_player:
