# project/routes/league.js
@@ -13,28 +13,12 @@ router.get("/summary", async (req, res, next) => {
   }
 });
 
-router.get("/matches/:league_id", async (req, res, next) => {
-  try{
-    const matches = await league_utils.getLeagueMatches(req.params.league_id);
-    if(matches.length==0){
-      throw({ status: 400, message: "didnt find avilable data on league" });
-    }
-    let results = await match_utils.extractRelevantData(matches);
-    res.status(200).send(results);
-  
-  }
-  catch(error){
-    next(error)
-
-  }
-  
-});
 
 router.get("/current_fixture", async (req, res, next) => {
   try{
     const current_fixture = await match_utils.getCurrentFixture(await league_utils.getLeagueId());
     if(current_fixture.length==0){
-      throw ({status:400, message:"didnt find avilable data on league" });
+      throw ({status:400, message:"didnt find available data on league" });
     }
     results = await match_utils.prePostMatches(current_fixture);
     res.status(200).send(results);
